# 3dMCGlauber

./: .gitignore  3dMCGlb.e  CMakeLists.txt  Glauber.cpp  Metropolis.e  README.md  compile.sh  get_LHAPDF.sh  input  run_all_UnitTests.sh  sweeper.sh
.github/workflow/: BuildTest.yml
.github/workflows/: BuildTest.yml
LHAPDF_Lib/lib/: libLHAPDF.la
LHAPDF_Lib/lib/pkgconfig/: lhapdf.pc
LHAPDF_Lib/share/LHAPDF/CT10nnlo/: CT10nnlo.info
eps09/: Makefile  eps09.cpp  eps09.h  eps09query.cpp
src/: CMakeLists.txt  CollisionEvent.cpp  CollisionEvent.h  CollisionEvent_UnitTest.cpp  EventGenerator.cpp  EventGenerator.h  Glauber.cpp  Glauber.h  MakeDensity.cpp  MakeDensity.h  Nucleon.cpp  Nucleon.h  Nucleon_UnitTest.cpp  Nucleus.cpp  Nucleus.h  Nucleus_UnitTest.cpp  Parameters.cpp  Parameters.h  ParametersMap.cpp  ParametersMap.h  ParametersMap_UnitTest.cpp  Parameters_UnitTest.cpp  Particle.h  Particle_UnitTest.cpp  PhysConsts.h  QCDString.cpp  QCDString.h  Quark.h  Quark_UnitTest.cpp  Random.cpp  Random.h  RandomUlty.cpp  RandomUlty.h  RandomUlty_UnitTest.cpp  Random_UnitTest.cpp  SampleDipoleValenceQuarkMetropolis.cpp  SampleValenceQuarkMetropolis.cpp  UnitTest_Parameters.cc  UnitTest_ParametersMap.cc  UnitTest_Util.cc  (+8 more)
tables/: C12_VMC.bin.in  C12_alphaCluster.bin.in  He3.bin.in  He4.bin.in  Ne20_NLEFT_dmin0.5fm_negativeweights.bin.in  Ne20_NLEFT_dmin0.5fm_positiveweights.bin.in  O16_NLEFT.bin.in  O16_NLEFT_dmin0.5fm_negativeweights.bin.in  O16_NLEFT_dmin0.5fm_positiveweights.bin.in  O16_PGCM_clustered_dmin0.bin.in  O16_VMC.bin.in  O16_alphaCluster.bin.in  download_nucleusTables.sh  triton.bin.in
test/: make_plots_valence_quark_x.py  run_all_UnitTests.sh  test_input
utilities/: MLSimsDriver.py  analyzeEccn.py  analyze_longitudinal_flow_correlations.py  calculate_energy_and_momentum.py  calculate_initial_distributions.py  saveAuPbToBinaryFile.py  saveToBinaryFile.py
